# carbondate-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  makefile
R/: plot_output.R  plot_oxcal_v_carbondate.R  plot_posterior_density.R  plot_predictive_density.R  plot_ranges.R  plot_ranges_attempt_2.R
Rmath/: CMakeLists.txt  Makefile  README  makefile  nmath.h
Rmath/include/: Rconfig.h  Rmath.h  config.h
data/: Normals.js  Normals.oxcal  armit.csv  armit.oxcal  buchanan  buchanan.csv  buchanan.oxcal  kde.oxcal  kerr.csv  kerr.js  kerr.oxcal  kerr_2.oxcal  kerr_and_others.oxcal  kerr_c14age.oxcal  kerr_f14C.js  kerr_f14C.oxcal  kerr_with_names.csv  kerrcarbondate.oxcal  np_kerr.oxcal  np_kerr_new.oxcal
inc/: carbondate.h
output/: armit_predictive_density.csv  buchanan_predictive_density.csv  kde.js  kerr_2.js  kerr_and_others.js  kerr_c14age.js  kerr_f14C.js  kerr_f14C.txt  kerr_predictive_density.csv  kerr_truncated.js  kerrcarbondate.js  np_kerr.js  np_kerr_new.js  sum.js
oxcal/: HOBS2022.14c  kerr_f14C.oxcal
src/: DPMM.cpp  DPMM.h  DensityOutput.cpp  DensityOutput.h  OxCalOutput.cpp  OxCalOutput.h  PolyaUrnDPMM.cpp  PolyaUrnDPMM.h  PosteriorDensityOutput.cpp  PosteriorDensityOutput.h  PredictiveDensityOutput.cpp  PredictiveDensityOutput.h  WalkerDPMM.cpp  WalkerDPMM.h  carbondate.h  carbondate_internal.h  csv_helpers.cpp  csv_helpers.h  helpers.cpp  helpers.h  js_output.cpp  js_output.h  log.cpp  log.h  plain_text.cpp  plain_text.h  read_data.cpp  read_data.h  sort.cpp  sort.h  work.cpp  work.h  write_data.cpp  write_data.h
